# aws-hands-on-training

./: .flake8  .gitignore  README.md  app.py
.github/workflows/: deploy.yml
cdk/: order_processing_stack.py
lambda/: requirements.txt
lambda/actions/: health.py
lambda/step_functions/: update_order.py  validate_order.py
week1/task1-api-gateway-lambda/: README.md  lambda_function.py
week1/task2-dynamodb/: README.md
week1/task2-event-driven-sqs/: README.md
week1/task3-dynamodb-design/: README.md  setup_dynamodb.py
week1/task3-s3-hosting/: README.md
week1/task4-cloudfront/: README.md
week1/task4-s3-presigned-urls/: README.md  lambda_function.py
week1/task5-cognito/: README.md
week1/task5-monitoring-cloudwatch/: README.md
week1/task6-error-handling/: README.md
week1/task6-full-integration/: README.md
week2/task1-step-functions/: README.md  check_inventory.py  process_payment.py  state-machine.json  update_order.py
week2/task2-cdk/: README.md  app.py  pyproject.toml
week2/task2-cdk/cdk/: api_stack.py
week2/task2-cdk/lambda/actions/: handler.py
week2/task2-cdk/lambda/shared/: helpers.py  scoring.py
week2/task2-cdk/lambda/step_functions/: check_inventory.py  process_payment.py  update_order.py
week2/task3-ci-cd/: README.md
week2/task4-deployment-rollback/: README.md
week2/task5-orchestration-integration/: README.md  setup_api.py
week2/task6-weekly-deliverable/: README.md  demo.sh
week3/task1-rag-assistant/: README.md  rag_assistant.py  requirements.txt
week3/task2-doc-ingestion/: README.md  s3-notification.json  (+2 more)
(+24 files in other folders)
