[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scj-sales-coach-infra"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "aws-cdk-lib>=2.100.0",
    "constructs>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "boto3",
]
